--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 		<option value="カット＋カラー＋ヘッドスパ">カット＋カラー＋ヘッドスパ</option>
 		<option value="カット＋パーマ">カット＋パーマ</option>
 		<option value="カット＋パーマ＋ヘッドスパ">カット＋パーマ＋ヘッドスパ</option>
+		<option value="ヘッドスパ">ヘッドスパ</option>
 		<option value="マツエク">マツエク</option>
+		<option value="マツパー">マツパー</option>
 		<option value="フェイシャル">フェイシャル</option>
 		</select>
         </div>
@@ -45,8 +47,6 @@
 		<option value="田野辺　武">田野辺　武</option>
 		<option value="長島　理桜香">長島　理桜香</option>
 		<option value="東岡　珠澪">東岡　珠澪</option>
-		<option value="金野　未空">金野　未空</option>
-		<option value="福士　江梨花">福士　江梨花</option>
 		</select>
         </div>
         <p class="mt-3">ご希望日時</p>
