--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<option value="カット＋カラー＋ヘッドスパ">カット＋カラー＋ヘッドスパ</option>
 		<option value="カット＋パーマ">カット＋パーマ</option>
 		<option value="カット＋パーマ＋ヘッドスパ">カット＋パーマ＋ヘッドスパ</option>
-		<option value="ヘッドスパ">ヘッドスパ</option>
-		<option value="マツエク">マツエク</option>
-		<option value="マツパー">マツパー</option>
 		<option value="フェイシャル">フェイシャル</option>
+		<option value="マツエク">ヘッドスパ</option>
+		<option value="マツエク">マツエク</option>
+		<option value="マツエク">マツパー</option>
 		</select>
         </div>
         <p class="mt-3">担当者</p>
@@ -47,6 +47,7 @@
 		<option value="田野辺　武">田野辺　武</option>
 		<option value="長島　理桜香">長島　理桜香</option>
 		<option value="東岡　珠澪">東岡　珠澪</option>
+
 		</select>
         </div>
         <p class="mt-3">ご希望日時</p>
