--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="jquery.datetimepicker.css" />
+	<link rel="stylesheet" type="text/css" href="main.css" />
 </head>
+		    <div class="container6">
+			<p>土日のご予約が大変混み合っております。<br>
+				比較的余裕を持ったお問合せをよろしくお願い致します。</p></div>
 <body>
-
     <form class="w-75 mx-auto">
         <p class="mt-3">お名前</p>
         <div>
@@ -30,10 +33,10 @@
 		<option value="カット＋カラー＋ヘッドスパ">カット＋カラー＋ヘッドスパ</option>
 		<option value="カット＋パーマ">カット＋パーマ</option>
 		<option value="カット＋パーマ＋ヘッドスパ">カット＋パーマ＋ヘッドスパ</option>
-		<option value="フェイシャル">フェイシャル</option>
-		<option value="マツエク">ヘッドスパ</option>
+		<option value="ヘッドスパ">ヘッドスパ</option>
 		<option value="マツエク">マツエク</option>
-		<option value="マツエク">マツパー</option>
+		<option value="マツパー">マツパー</option>
+		<option value="フェイシャル">フェイシャル</option>
 		</select>
         </div>
         <p class="mt-3">担当者</p>
@@ -47,7 +50,6 @@
 		<option value="田野辺　武">田野辺　武</option>
 		<option value="長島　理桜香">長島　理桜香</option>
 		<option value="東岡　珠澪">東岡　珠澪</option>
-
 		</select>
         </div>
         <p class="mt-3">ご希望日時</p>
