--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 		<option value="東岡　珠澪">東岡　珠澪</option>
 		</select>
         </div>
+        <div class="container6">
+			<p>混雑具合によっては、ご希望日時にお取り出来ない場合がございます。<br>
+				日程をズラす等、できる限り第３希望までのご入力をお願い致します。</p></div>
         <p class="mt-3">ご希望日時</p>
         <div>
         <input class="form-control w-100 mt-1" type="text" id="schedule" name="schedule" value="第１希望" readonly />
