--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<option value="齋藤　圭紀">齋藤　圭紀</option>
 		<option value="飯沼　美里">飯沼　美里</option>
 		<option value="川田　綾子">川田　綾子</option>
-		<option value="田野辺　武">田野辺　武</option>
+		<option value="田野辺　武">田野辺　武　ご新規対応✕</option>
 		<option value="長島　理桜香">長島　理桜香</option>
 		<option value="東岡　珠澪">東岡　珠澪</option>
 		</select>
