--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <div>
         <select class="form-control w-100 mt-1" name="stylist">
 		<option value="指名なし">指名なし</option>
-		<option value="浜辺　都子">浜辺　都子</option>
-		<option value="齋藤　圭紀">齋藤　圭紀</option>
-		<option value="飯沼　美里">飯沼　美里</option>
-		<option value="川田　綾子">川田　綾子</option>
-		<option value="田野辺　武">田野辺　武　ご新規対応✕</option>
-		<option value="長島　理桜香">長島　理桜香</option>
-		<option value="東岡　珠澪">東岡　珠澪</option>
+		<option value="浜辺　都子">浜辺 都子</option>
+		<option value="齋藤　圭紀">齋藤 圭紀</option>
+		<option value="飯沼　美里">飯沼 美里</option>
+		<option value="川田　綾子">川田 綾子</option>
+		<option value="田野辺　武">田野辺 武　(ご新規対応✕)</option>
+		<option value="長島　理桜香">長島 理桜香</option>
+		<option value="東岡　珠澪">東岡 珠澪</option>
 		</select>
         </div>
         <div class="container6">
