--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         <div>
         <input class="form-control w-100 mt-1" type="text" id="schedule3" name="schedule3" value="第３希望" readonly />
         </div>
-		<p class="mt-3">ご希望・ご相談はこちら</p>
+		<p class="mt-3">ご希望・ご相談はこちら<br>
+		上記のご希望日時以外にもご来店可能な日時があればご記入下さい</p>
         <div>
         <textarea class="form-control w-100"  type="textarea" id="exampleFormControlTextarea1" rows="3" name="remarks" value=""></textarea>
         </div>
