--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
         <select class="form-control w-100 mt-1" name="smenu">
 		<option value="カット">カット</option>
 		<option value="カット＋カラー">カット＋カラー</option>
+		<option value="カット+カラー+トリートメント">カット+カラー+トリートメント</option>
 		<option value="カット＋トリートメント">カット＋トリートメント</option>
 		<option value="カット＋ヘッドスパ">カット＋ヘッドスパ</option>
 		<option value="カット＋カラー＋ヘッドスパ">カット＋カラー＋ヘッドスパ</option>
 		<option value="カット＋パーマ">カット＋パーマ</option>
+		<option value="カット+パーマ+トリートメント">カット+パーマ+トリートメント</option>
 		<option value="カット＋パーマ＋ヘッドスパ">カット＋パーマ＋ヘッドスパ</option>
 		<option value="ヘッドスパ">ヘッドスパ</option>
+		<option value="ドライヘッドスパ">ドライヘッドスパ</option>
 		<option value="マツエク">マツエク</option>
 		<option value="マツパー">マツパー</option>
 		<option value="フェイシャル">フェイシャル</option>
@@ -49,7 +52,9 @@
 		<option value="川田　綾子">川田 綾子</option>
 		<option value="田野辺　武">田野辺 武　(ご新規対応✕)</option>
 		<option value="長島　理桜香">長島 理桜香</option>
-		<option value="東岡　珠澪">東岡 珠澪</option>
+		<option value="石井　瑞希">石井　瑞希</option>
+		<option value="滑澤　由衣">滑澤　由衣</option>
+		<option value="佐藤　真由美">佐藤　真由美</option>
 		</select>
         </div>
         <div class="container6">
