--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<option value="カット+パーマ+トリートメント">カット+パーマ+トリートメント</option>
 		<option value="カット＋パーマ＋ヘッドスパ">カット＋パーマ＋ヘッドスパ</option>
 		<option value="ヘッドスパ">ヘッドスパ</option>
+		<option value="髪質改善トリートメント">髪質改善トリートメント</option>
 		<option value="ドライヘッドスパ">ドライヘッドスパ</option>
 		<option value="マツエク">マツエク</option>
 		<option value="マツパー">マツパー</option>
@@ -47,7 +48,6 @@
         <select class="form-control w-100 mt-1" name="stylist">
 		<option value="指名なし">指名なし</option>
 		<option value="浜辺　都子">浜辺 都子</option>
-		<option value="齋藤　圭紀">齋藤 圭紀</option>
 		<option value="飯沼　美里">飯沼 美里</option>
 		<option value="川田　綾子">川田 綾子</option>
 		<option value="田野辺　武">田野辺 武　(ご新規対応✕)</option>
