--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <div>
         <select class="form-control w-100 mt-1" name="stylist">
 		<option value="指名なし">指名なし</option>
-		<option value="浜辺　都子">浜辺 都子</option>
 		<option value="飯沼　美里">飯沼 美里</option>
 		<option value="川田　綾子">川田 綾子</option>
+		<option value="菅原 都美">菅原 都美</option>
 		<option value="田野辺　武">田野辺 武　(ご新規対応✕)</option>
 		<option value="長島　理桜香">長島 理桜香</option>
 		<option value="石井　瑞希">石井　瑞希</option>
