--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<option value="石井　瑞希">石井　瑞希</option>
 		<option value="滑澤　由衣">滑澤　由衣</option>
 		<option value="佐藤　真由美">佐藤　真由美</option>
+		<option value="平本 莉久">平本 莉久</option>
 		</select>
         </div>
         <div class="container6">
